[gd_scene load_steps=5 format=3 uid="uid://clf7724ati23g"]

[ext_resource type="Script" uid="uid://bspxj0pxi0bpo" path="res://scenes/level_editor/level_editor.gd" id="1_ahyo7"]
[ext_resource type="Script" uid="uid://cfymfv4422fwj" path="res://utils/conductor.gd" id="2_le4y8"]
[ext_resource type="AudioStream" uid="uid://dlucayhwglg2q" path="res://assets/audios/test.mp3" id="3_lxx8n"]
[ext_resource type="PackedScene" uid="uid://dweiuwu61lyfe" path="res://scenes/components/file_picker/file_picker.tscn" id="4_f4xfo"]

[node name="LevelEditor" type="Node2D"]
script = ExtResource("1_ahyo7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("2_le4y8")
audio = ExtResource("3_lxx8n")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="."]
offset_left = 93.0
offset_top = 135.0
offset_right = 141.0
offset_bottom = 166.0
text = "thing"

[node name="FilePicker" parent="." instance=ExtResource("4_f4xfo")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="cancelled" from="FilePicker" to="." method="_on_file_picker_cancelled"]
[connection signal="selected" from="FilePicker" to="." method="_on_file_picker_selected"]
